Add Generic Repository and specification pattern

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=giro.db"
-  }
+  },
+  "ApiUrl":  "https://localhost:7034/"
 }
